language/move-lang/tests/move_check/naming/invalid_call_lhs_value.exp
error: 

   ┌── tests/move_check/naming/invalid_call_lhs_value.move:3:9 ───
   │
 3 │         5();
   │         ^^^ Invalid function call
   ·
 3 │         5();
   │         - Expected: a name, a dotted Module access, or dotted access of an expression
   │

error: 

   ┌── tests/move_check/naming/invalid_call_lhs_value.move:4:9 ───
   │
 4 │         5(0, 1);
   │         ^^^^^^^ Invalid function call
   ·
 4 │         5(0, 1);
   │         - Expected: a name, a dotted Module access, or dotted access of an expression
   │

