language/move-lang/tests/move_check/naming/invalid_call_lhs_value.move
module M {
    foo() {
        5();
        5(0, 1);
    }
}
